<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/screens_bg_color"
    android:padding="16.0dip">

    <ImageButton
        android:id="@id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:text="@string/add_password"
        android:textColor="@color/dark_night_blue"
        android:textSize="24.0sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/layout_name_input"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32.0dip"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/edt_txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/layout_email_and_username_input"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:hint="@string/username_email_or_phone_number"
        app:layout_constraintTop_toBottomOf="@id/layout_name_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/edt_txt_email_and_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/layout_password"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/layout_categories_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/edt_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/layout_categories_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        app:boxCornerRadiusBottomEnd="12.0dip"
        app:boxCornerRadiusBottomStart="12.0dip"
        app:boxCornerRadiusTopEnd="12.0dip"
        app:boxCornerRadiusTopStart="12.0dip"
        app:boxStrokeWidth="0.0dip"
        app:boxStrokeWidthFocused="0.0dip"
        app:endIconDrawable="@drawable/ic_down"
        app:endIconTint="@color/dark_night_blue"
        app:hintTextColor="@color/dark_night_blue"
        app:layout_constraintTop_toBottomOf="@id/layout_email_and_username_input">

        <AutoCompleteTextView
            android:id="@id/spinner_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:focusable="false"
            android:hint="@string/category"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:text="@string/auto_fill"
        android:textColor="@color/dark_night_blue"
        android:textSize="16.0sp"
        app:layout_constraintBottom_toBottomOf="@+id/switch_auto_fill"
        app:layout_constraintEnd_toStartOf="@+id/switch_auto_fill"
        app:layout_constraintTop_toTopOf="@+id/switch_auto_fill" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_auto_fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/layout_password"
        app:layout_constraintTop_toBottomOf="@+id/layout_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@id/btn_add"
        style="@style/MaterialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="18.0sp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>