<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screens_bg_color"
    android:padding="16.0dip">

    <TextView
        android:id="@id/tv_generate_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:gravity="center"
        android:text="@string/generate_password"
        android:textColor="@color/dark_night_blue"
        android:textSize="24.0sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32.0dip"
        app:boxCornerRadiusBottomEnd="12.0dip"
        app:boxCornerRadiusBottomStart="12.0dip"
        app:boxCornerRadiusTopEnd="12.0dip"
        app:boxCornerRadiusTopStart="12.0dip"
        app:boxStrokeWidth="0.0dip"
        app:boxStrokeWidthFocused="0.0dip"
        app:endIconMode="custom"
        app:endIconTint="@color/dark_night_blue"
        app:hintTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_generate_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/edt_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:focusable="false"
            android:hint="@string/password"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@id/tv_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32.0dip"
        android:fontFamily="@font/medium"
        android:text="@string/length"
        android:textColor="@color/dark_night_blue"
        android:textSize="18.0sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_password" />

    <com.google.android.material.card.MaterialCardView
        android:id="@id/card_view_password_length"
        android:layout_width="32.0dip"
        android:layout_height="32.0dip"
        android:layout_marginStart="48.0dip"
        app:cardCornerRadius="4.0dip"
        app:cardElevation="0.0dip"
        app:layout_constraintBottom_toBottomOf="@id/tv_length"
        app:layout_constraintStart_toEndOf="@id/tv_length"
        app:layout_constraintTop_toTopOf="@id/tv_length"
        app:strokeColor="@color/slate_grey"
        app:strokeWidth="1.0dip">

        <TextView
            android:id="@id/tv_password_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/medium"
            android:text="6"
            android:textColor="@color/dark_night_blue" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.slider.Slider
        android:id="@id/slider_password_length"
        android:layout_width="150.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="16.0dip"
        android:stepSize="1.0"
        android:value="6.0"
        android:valueFrom="6.0"
        android:valueTo="15.0"
        app:haloColor="@color/main_color"
        app:layout_constraintBottom_toBottomOf="@id/card_view_password_length"
        app:layout_constraintStart_toEndOf="@id/card_view_password_length"
        app:layout_constraintTop_toTopOf="@id/card_view_password_length"
        app:thumbColor="@color/main_color"
        app:tickVisible="false"
        app:trackColorActive="@color/main_color"
        app:trackColorInactive="@color/slate_grey"
        app:trackHeight="8.0dip" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider_password_length">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/numbers"
            android:textColor="@color/dark_night_blue"
            android:textSize="18.0sp" />

        <CheckBox
            android:id="@id/check_box_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24.0dip"
            android:buttonTint="@color/main_color"
            android:minWidth="0.0dip"
            android:minHeight="0.0dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.0dip"
            android:fontFamily="@font/medium"
            android:text="@string/symbols"
            android:textColor="@color/dark_night_blue"
            android:textSize="18.0sp" />

        <CheckBox
            android:id="@id/check_box_symbols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24.0dip"
            android:buttonTint="@color/main_color"
            android:minWidth="0.0dip"
            android:minHeight="0.0dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.0dip"
            android:fontFamily="@font/medium"
            android:text="@string/lowercase"
            android:textColor="@color/dark_night_blue"
            android:textSize="18.0sp" />

        <CheckBox
            android:id="@id/check_box_lowercase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24.0dip"
            android:layout_marginTop="16.0dip"
            android:buttonTint="@color/main_color"
            android:minWidth="0.0dip"
            android:minHeight="0.0dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.0dip"
            android:layout_marginTop="16.0dip"
            android:fontFamily="@font/medium"
            android:text="@string/uppercase"
            android:textColor="@color/dark_night_blue"
            android:textSize="18.0sp" />

        <CheckBox
            android:id="@id/check_box_uppercase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24.0dip"
            android:layout_marginTop="16.0dip"
            android:buttonTint="@color/main_color"
            android:minWidth="0.0dip"
            android:minHeight="0.0dip" />
    </GridLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@id/btn_generate_password"
        style="@style/MaterialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:textSize="18.0sp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>